spacing fix

--- a/src/sass/sections/_about.scss
+++ b/src/sass/sections/_about.scss
@@ -10,7 +10,7 @@
   border-top: 0px;
   -webkit-clip-path: polygon(0 0, 100% 0, 100% 80%, 0 100%);
   clip-path: polygon(0 0, 100% 0, 100% 80%, 0 100%);
-  padding-bottom: 250px;
+  padding-bottom: 350px;
 
   @include respond(tab-land) {
     height: 100%;
